--- a/NcDonalds/Views/Pedido/Checkout.cshtml
+++ b/NcDonalds/Views/Pedido/Checkout.cshtml
@@ -70,92 +70,80 @@
 
             <div class="container-checkout">
 
-                <div id="form-tipo-entrega">
-                    <button class="btn btn-warning" type="button" checked data-bs-toggle="collapse" data-bs-target="#collapse-tipo-entrega" aria-expanded="false" aria-controls="collapse-tipo-entrega">
-                        Entrega
-                    </button>
+                <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
+                    <input type="radio" class="btn-check" name="tipoEntrega" id="retirada" onclick="removerEndereco(); pedidoRetirada();" autocomplete="off" checked>
+                    <label class="btn btn-outline-warning" for="retirada">Retirada</label>
 
-                    <button id="retirada" onclick="removerEndereco()" class="btn btn-warning" type="button" checked data-bs-toggle="collapse" data-bs-target="#collapse-tipo-entrega" aria-expanded="false" aria-controls="collapse-tipo-entrega">
-                        Retirada
-                    </button>
+                    <input type="radio" class="btn-check" name="tipoEntrega" id="entrega" onclick="pedidoEntrega()" autocomplete="off">
+                    <label class="btn btn-outline-warning" for="entrega">Entrega</label>
                 </div>
-
 
                 <div class="collapse show" id="collapse-tipo-entrega">
 
-                    <h3 style="margin: 20px 0"> @Html.DisplayNameFor(model => model.EnderecoUser) </h3>
+                    @if (Model.EnderecoUser.Count() > 0)
+                    {
+                        <h3 style="margin: 20px 0"> @Html.DisplayNameFor(model => model.EnderecoUser) </h3>
 
-                    <div id="groupRadioEntrega">
-                        @foreach (var endereco in Model.EnderecoUser)
-                        {
-                            <div class="form-check check-endereco">
-                                <input onclick="getEndereco(@endereco.EnderecoId)" class="form-check-input" type="radio" name="radioEntrega" id="@string.Concat("radioEntrega", endereco.EnderecoId)">
-                                <label class="form-check-label" for="@string.Concat("radioEntrega", endereco.EnderecoId)">
-                                    @endereco.Detalhe
-                                </label>
+                        <div id="groupRadioEntrega">
+                            @foreach (var endereco in Model.EnderecoUser)
+                            {
+                                <div class="form-check check-endereco">
+                                    <input onclick="getEndereco(@endereco.EnderecoId)" class="form-check-input" type="radio" name="radioEntrega" id="@string.Concat("radioEntrega", endereco.EnderecoId)">
+                                    <label class="form-check-label" for="@string.Concat("radioEntrega", endereco.EnderecoId)">
+                                        @endereco.Detalhe
+                                    </label>
+                                </div>
+                            }
+
+                            <div class="form-check">
+                                <input onclick="removerEndereco()" class="form-check-input" type="radio" name="radioEntrega" id="radioEntregaEmpty">
+                                <label class="form-check-label" for="radioEntregaEmpty">Outro</label>
                             </div>
-                        }
-
-                        <div class="form-check">
-                            <input onclick="removerEndereco()" class="form-check-input" type="radio" name="radioEntrega" id="radioEntregaEmpty">
-                            <label class="form-check-label" for="radioEntregaEmpty">
-                                Outro Endereço
-                            </label>
                         </div>
-                    </div>
-
+                    }
 
                     <div id="form-enderecoEntrega" class="">
 
-                        <input type="hidden" id="endereco-Id" asp-for="EnderecoPedido.EnderecoId" class="" />
-                        <input type="hidden" id="endereco-userId" asp-for="EnderecoPedido.UserId" class="" />
+                        <input type="hidden" id="endereco-Id" asp-for="EnderecoPedido.EnderecoId" class="" disabled />
+                        <input type="hidden" id="endereco-userId" asp-for="EnderecoPedido.UserId" class="" disabled/>
+                        <input asp-for="EnderecoPedido.Detalhe" type="hidden" class="form-control" id="endereco-detalhe" disabled>
+                        <input asp-for="EnderecoPedido.Cep" type="hidden" class="form-control" id="endereco-cep" disabled>
 
-                        <div class="form-floating inputs-endereco">
-                            <span asp-validation-for="EnderecoPedido.Detalhe" class=""></span>
-                            <input asp-for="EnderecoPedido.Detalhe" type="text" class="form-control" id="endereco-detalhe" placeholder="Detalhe">
-                            <label for="endereco-detalhe">Detalhe</label>
-                        </div>
 
                         <div class="form-floating inputs-endereco">
                             <span asp-validation-for="EnderecoPedido.Estado" class=""></span>
-                            <input asp-for="EnderecoPedido.Estado" type="text" class="form-control" id="endereco-estado" placeholder="Estado">
+                            <input asp-for="EnderecoPedido.Estado" type="text" class="form-control" id="endereco-estado" placeholder="Estado" disabled> 
                             <label for="endereco-estado">Estado</label>
                         </div>
 
                         <div class="form-floating inputs-endereco">
                             <span asp-validation-for="EnderecoPedido.Cidade" class=""></span>
-                            <input asp-for="EnderecoPedido.Cidade" type="text" class="form-control" id="endereco-cidade" placeholder="Cidade">
+                            <input asp-for="EnderecoPedido.Cidade" type="text" class="form-control" id="endereco-cidade" placeholder="Cidade" disabled>
                             <label for="endereco-cidade">Cidade</label>
                         </div>
 
                         <div class="form-floating inputs-endereco">
                             <span asp-validation-for="EnderecoPedido.Bairro" class=""></span>
-                            <input asp-for="EnderecoPedido.Bairro" type="text" class="form-control" id="endereco-bairro" placeholder="Bairro">
+                            <input asp-for="EnderecoPedido.Bairro" type="text" class="form-control" id="endereco-bairro" placeholder="Bairro" disabled>
                             <label for="endereco-bairro">Bairro</label>
                         </div>
 
                         <div class="form-floating inputs-endereco">
                             <span asp-validation-for="EnderecoPedido.Rua" class=""></span>
-                            <input asp-for="EnderecoPedido.Rua" type="text" class="form-control" id="endereco-rua" placeholder="Rua">
+                            <input asp-for="EnderecoPedido.Rua" type="text" class="form-control" id="endereco-rua" placeholder="Rua" disabled>
                             <label for="endereco-rua">Rua</label>
                         </div>
 
                         <div class="form-floating inputs-endereco">
                             <span asp-validation-for="EnderecoPedido.Numero" class=""></span>
-                            <input asp-for="EnderecoPedido.Numero" type="text" class="form-control" id="endereco-numero" placeholder="Número">
+                            <input asp-for="EnderecoPedido.Numero" type="text" class="form-control" id="endereco-numero" placeholder="Número" disabled>
                             <label for="endereco-numero">Bairro</label>
                         </div>
 
                         <div class="form-floating inputs-endereco">
                             <span asp-validation-for="EnderecoPedido.Complemento" class=""></span>
-                            <input asp-for="EnderecoPedido.Complemento" type="text" class="form-control" id="endereco-complemento" placeholder="Complemento">
+                            <input asp-for="EnderecoPedido.Complemento" type="text" class="form-control" id="endereco-complemento" placeholder="Complemento" disabled>
                             <label for="endereco-complemento">Complemento</label>
-                        </div>
-
-                        <div class="form-floating inputs-endereco">
-                            <span asp-validation-for="EnderecoPedido.Cep" class=""></span>
-                            <input asp-for="EnderecoPedido.Cep" type="text" class="form-control" id="endereco-cep" placeholder="CEP">
-                            <label for="endereco-cep">CEP</label>
                         </div>
                     </div>
                 </div>
