Implementação inicial de desaclopamento da lógica do controller para service

--- a/NcDonalds/Views/Home/Index.cshtml
+++ b/NcDonalds/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
             <div class="container-row">
 
                 <div class="img-home">
-                    <img src="https://ncdonalds.blob.core.windows.net/images-webdesign/images_webdesign-girlaboutus.png" />
+                    <img src="~/images/Institucional.jpg" />
                 </div>
 
                 <div class="container-column content-home">
@@ -39,7 +39,8 @@
                 </div>
 
                 <div class="img-home">
-                    <img src="https://ncdonalds.blob.core.windows.net/images-webdesign/images_webdesign-girlaboutus.png" />
+                    <img src="~/images/Institucional.jpg" />
+
                 </div>
 
             </div>
